chore: remove useless component

--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -501,12 +501,11 @@
   "Turn pages": "Turn pages",
   "Others": "Others",
   "Other records": "Other records",
-  "Save as reference template": "Save as reference template",
-  "Save as inherited template": "Save as inherited template",
+  "Save as template": "Save as template",
   "Save as block template": "Save as block template",
   "Block templates": "Block templates",
   "Block template": "Block template",
-  "Convert reference to duplicate": "Convert reference to duplicate",
+  "Convert template to duplicate": "Convert template to duplicate",
   "Template name": "Template name",
   "Block type": "Block type",
   "No blocks to connect": "No blocks to connect",
@@ -591,7 +590,6 @@
   "Blank block": "Blank block",
   "Duplicate template": "Duplicate template",
   "Reference template": "Reference template",
-  "Inherited template": "Inherited template",
   "Create calendar block": "Create calendar block",
   "Create kanban block": "Create kanban block",
   "Grouping field": "Grouping field",
@@ -891,7 +889,6 @@
   "No pages yet, please configure first": "No pages yet, please configure first",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode",
   "Deprecated": "Deprecated",
-  "The following old template features have been deprecatedcc and will be removed in next version.": "The following old template features have been deprecated and will be removed in next version.",
   "Full permissions": "Full permissions",
   "Refresh data blocks": "Refresh data blocks",
   "Select data blocks to refresh": "Select data blocks to refresh",
