--- a/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
@@ -61,5 +61,7 @@
   "2. Configure reset email": "2. Configureer reset e-mail",
   "The notification channel used to send the reset password email, only support email channel": "Het notificatiekanaal dat wordt gebruikt om de e-mail voor het opnieuw instellen van het wachtwoord te verzenden, ondersteunt alleen het e-mailkanaal",
   "Reset link expiration (minutes)": "Verloop van de resetlink (minuten)",
-  "Reset password link": "Wachtwoord opnieuw instellen link"
+  "Reset password link": "Wachtwoord opnieuw instellen link",
+  "Missing X-Authenticator in request header": "Ontbrekende X-Authenticator in de aanvraagheader",
+  "Reset email sent successfully": "Reset e-mail succesvol verzonden"
 }
