feat: keep reference templates feature (#6743)
* feat: be able to create reference template

* chore: update template title

* fix: template menu position inconsitant

* chore: add reference templates into block template management view

* fix: menu not correct

* fix: incorrect label

* chore: remove useless component

* fix: build error

* fix: incorrect translate

* fix: incorrect  translate tab [skip ci]

* chore: remove edit icon[skip ci]

* fix: e2e tests failing

--- a/packages/core/client/src/locale/de-DE.json
+++ b/packages/core/client/src/locale/de-DE.json
@@ -500,7 +500,8 @@
   "Turn pages": "Seiten umblättern",
   "Others": "Andere",
   "Other records": "Andere Datensätze",
-  "Save as template": "Als Vorlage speichern",
+  "Save as reference template": "Als Referenzvorlage speichern",
+  "Save as inherited template": "Als vererbte Vorlage speichern",
   "Save as block template": "Als Blockvorlage speichern",
   "Block templates": "Blockvorlagen",
   "Block template": "Blockvorlage",
@@ -589,6 +590,7 @@
   "Blank block": "Leerer Block",
   "Duplicate template": "Vorlage duplizieren",
   "Reference template": "Referenzvorlage",
+  "Inherited template": "Vererbte Vorlage",
   "Create calendar block": "Kalenderblock erstellen",
   "Create kanban block": "Kanban-Block erstellen",
   "Grouping field": "Gruppierungsfeld",
