--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -485,7 +485,8 @@
   "Turn pages": "Tourner les pages",
   "Others": "Autres",
   "Other records": "Autres enregistrements",
-  "Save as template": "Enregistrer en tant que modèle",
+  "Save as reference template": "Enregistrer en tant que modèle de référence",
+  "Save as inherited template": "Enregistrer en tant que modèle hérité",
   "Save as block template": "Enregistrer en tant que modèle de bloc",
   "Block templates": "Modèles de bloc",
   "Block template": "Modèle de bloc",
@@ -573,6 +574,7 @@
   "Blank block": "Bloc vierge",
   "Duplicate template": "Dupliquer le modèle",
   "Reference template": "Référencer le modèle",
+  "Inherited template": "Modèle hérité",
   "Create calendar block": "Créer un bloc de calendrier",
   "Create kanban block": "Créer un bloc kanban",
   "Grouping field": "Champ de regroupement",
@@ -826,7 +828,6 @@
   "No pages yet, please configure first": "Pas encore de pages, veuillez configurer d'abord",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Cliquez sur l'icône \"Éditeur d'interface utilisateur\" dans le coin supérieur droit pour entrer en mode Éditeur d'interface utilisateur",
   "Deprecated": "Déprécié",
-  "The following old template features have been deprecated and will be removed in next version.": "Les fonctionnalités des anciens modèles ont été dépréciées et seront supprimées dans la prochaine version.",
   "Full permissions": "Tous les droits",
   "Refresh data blocks": "Actualiser les blocs de données",
   "Select data blocks to refresh": "Actualiser les blocs de données",
