--- a/packages/core/client/src/locale/ja-JP.json
+++ b/packages/core/client/src/locale/ja-JP.json
@@ -397,7 +397,8 @@
   "Turn pages": "ページをめくる",
   "Others": "その他",
   "Other records": "他のレコード",
-  "Save as template": "テンプレートとして保存",
+  "Save as reference template": "参照テンプレートとして保存",
+  "Save as inherited template": "継承テンプレートとして保存",
   "Save as block template": "ブロックテンプレートとして保存",
   "Block templates": "ブロックテンプレート",
   "Block template": "ブロックテンプレート",
@@ -472,6 +473,7 @@
   "Blank block": "空のブロック",
   "Duplicate template": "テンプレートをコピー",
   "Reference template": "テンプレートを参照",
+  "Inherited template": "継承テンプレート",
   "Create calendar block": "カレンダーブロックの作成",
   "Create kanban block": "かんばんブロックの作成",
   "Grouping field": "グループフィールド",
@@ -1044,7 +1046,6 @@
   "No pages yet, please configure first": "まだページがありません。最初に設定してください",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "ユーザーインターフェースエディターモードに入るには、右上隅の「UIエディタ」アイコンをクリックしてください",
   "Deprecated": "非推奨",
-  "The following old template features have been deprecated and will be removed in next version.": "次の古いテンプレート機能は非推奨になり、次のバージョンで削除されます。",
   "Full permissions": "すべての権限",
   "Refresh data blocks": "データブロックを更新",
   "Select data blocks to refresh": "データブロックを選択して更新",
