--- a/packages/core/client/src/locale/nl-NL.json
+++ b/packages/core/client/src/locale/nl-NL.json
@@ -504,7 +504,8 @@
     "Turn pages": "Pagina's omslaan",
     "Others": "Overigen",
     "Other records": "Andere records",
-    "Save as template": "Opslaan als sjabloon",
+    "Save as reference template": "Opslaan als referentiesjabloon",
+    "Save as inherited template": "Opslaan als overerfde sjabloon",
     "Save as block template": "Opslaan als bloksjabloon",
     "Block templates": "Bloksjablonen",
     "Block template": "Bloksjabloon",
@@ -593,6 +594,7 @@
     "Blank block": "Leeg blok",
     "Duplicate template": "Sjabloon dupliceren",
     "Reference template": "Sjabloon refereren",
+    "Inherited template": "Overerfde sjabloon",
     "Create calendar block": "Kalenderblok maken",
     "Create kanban block": "Kanbanblok maken",
     "Grouping field": "Groepeer veld",
