--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -527,7 +527,8 @@
   "Turn pages": "翻页",
   "Others": "其他",
   "Other records": "其他记录",
-  "Save as template": "保存为模板",
+  "Save as reference template": "保存为引用模板",
+  "Save as inherited template": "保存为继承模板",
   "Save as block template": "保存为区块模板",
   "Block templates": "区块模板",
   "Block template": "区块模板",
@@ -611,6 +612,7 @@
   "Blank block": "空区块",
   "Duplicate template": "复制模板",
   "Reference template": "引用模板",
+  "Inherited template": "继承模板",
   "Create calendar block": "创建日历区块",
   "Create kanban block": "创建看板区块",
   "Grouping field": "分组字段",
@@ -1088,7 +1090,6 @@
   "Are you sure you want to hide this tab?": "你确定要隐藏该标签页吗？",
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "隐藏后，该标签将不再显示在标签栏中。要想再次显示它，你需要到路由管理页面进行设置。",
   "Deprecated": "已弃用",
-  "The following old template features have been deprecated and will be removed in next version.": "以下旧的模板功能已弃用，将在下个版本移除。",
   "Full permissions": "全部权限",
   "Enable index column": "启用序号列",
   "Date scope": "日期范围",
