--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -494,7 +494,8 @@
   "Turn pages": "Volta pagine",
   "Others": "Altri",
   "Other records": "Altri record",
-  "Save as template": "Salva come modello",
+  "Save as reference template": "Salva come modello di riferimento",
+  "Save as inherited template": "Salva come modello ereditato",
   "Save as block template": "Salva come modello blocco",
   "Block templates": "Modelli blocco",
   "Block template": "Modello blocco",
@@ -580,6 +581,7 @@
   "Blank block": "Blocco vuoto",
   "Duplicate template": "Modello duplicato",
   "Reference template": "Modello di riferimento",
+  "Inherited template": "Modello ereditato",
   "Create calendar block": "Crea blocco calendario",
   "Create kanban block": "Crea blocco kanban",
   "Grouping field": "Campo di raggruppamento",
