--- a/packages/core/client/src/locale/ko-KR.json
+++ b/packages/core/client/src/locale/ko-KR.json
@@ -517,7 +517,8 @@
   "Turn pages": "페이지 넘김",
   "Others": "기타",
   "Other records": "기타 레코드",
-  "Save as template": "템플릿으로 저장",
+  "Save as reference template": "참조 템플릿으로 저장",
+  "Save as inherited template": "상속 템플릿으로 저장",
   "Save as block template": "블록 템플릿으로 저장",
   "Block templates": "블록 템플릿",
   "Block template": "블록 템플릿",
@@ -601,6 +602,7 @@
   "Blank block": "빈 블록",
   "Duplicate template": "템플릿 복제",
   "Reference template": "참조 템플릿",
+  "Inherited template": "상속 템플릿",
   "Create calendar block": "캘린더 블록 생성",
   "Create kanban block": "칸반 블록 생성",
   "Grouping field": "그루핑 필드",
@@ -917,7 +919,6 @@
   "No pages yet, please configure first": "아직 페이지가 없습니다. 먼저 설정하십시오",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "사용자 인터페이스 편집기 모드에 들어가려면 오른쪽 상단의 \"UI 편집기\" 아이콘을 클릭하십시오",
   "Deprecated": "사용 중단됨",
-  "The following old template features have been deprecated and will be removed in next version.": "다음 오래된 템플릿 기능은 사용 중단되었으며 다음 버전에서 제거될 것입니다.",
   "Full permissions": "모든 권한",
   "Refresh data blocks": "데이터 블록 새로 고침",
   "Select data blocks to refresh": "데이터 블록을 선택하여 새로 고침",
