--- a/packages/core/client/src/locale/tr-TR.json
+++ b/packages/core/client/src/locale/tr-TR.json
@@ -336,7 +336,8 @@
   "Turn pages": "Sayfaları çevir",
   "Others": "Diğerleri",
   "Other records": "Diğer kayıtlar",
-  "Save as template": "Şablon olarak kaydet",
+  "Save as reference template": "Referans şablonu olarak kaydet",
+  "Save as inherited template": "Kalıtım şablonu olarak kaydet",
   "Save as block template": "Blok şablonu olarak kaydet",
   "Block templates": "Blok şablonları",
   "Block template": "Blok şablonu",
@@ -411,6 +412,7 @@
   "Blank block": "Boş blok",
   "Duplicate template": "Şablonun kopyasını oluştur",
   "Reference template": "Referans şablon",
+  "Inherited template": "Kalıtım şablonu",
   "Create calendar block": "Takvim bloğu oluştur",
   "Create kanban block": "Kanban bloğu oluştur",
   "Grouping field": "Alan gruplandırma",
@@ -608,7 +610,6 @@
   "Are you sure you want to hide this tab?": "Bu sekmeyi gizlemek istediğinizden emin misiniz?",
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Gizlendikten sonra, bu sekme artık sekme çubuğunda görünmeyecek. Onu tekrar göstermek için, rotayı yönetim sayfasına gidip ayarlamanız gerekiyor.",
   "Deprecated": "Kullanımdan kaldırıldı",
-  "The following old template features have been deprecated and will be removed in next version.": "Aşağıdaki eski şablon özellikleri kullanımdan kaldırıldı ve gelecek sürümlerde kaldırılacaktır.",
   "Full permissions": "Tüm izinler",
   "No pages yet, please configure first": "Henüz sayfa yok, lütfen önce yapılandırın",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Kullanıcı arayüzü düzenleyici moduna girmek için sağ üst köşedeki \"Kullanıcı Arayüzü Düzenleyici\" simgesine tıklayın",
