--- a/packages/core/client/src/locale/zh-TW.json
+++ b/packages/core/client/src/locale/zh-TW.json
@@ -518,7 +518,8 @@
   "Turn pages": "翻頁",
   "Others": "其他",
   "Other records": "其他記錄",
-  "Save as template": "儲存為模板",
+  "Save as reference template": "儲存為引用模板",
+  "Save as inherited template": "儲存為繼承模板",
   "Save as block template": "儲存為區塊模板",
   "Block templates": "區塊模板",
   "Block template": "區塊模板",
@@ -602,6 +603,7 @@
   "Blank block": "空區塊",
   "Duplicate template": "複製模板",
   "Reference template": "引用模板",
+  "Inherited template": "繼承模板",
   "Create calendar block": "建立日曆區塊",
   "Create kanban block": "建立看板區塊",
   "Grouping field": "群組欄位",
@@ -915,7 +917,6 @@
   "Are you sure you want to hide this tab?": "你確定要隱藏這個標籤嗎？",
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "隱藏後，這個標籤將不再出現在標籤欄中。要再次顯示它，你需要到路由管理頁面進行設置。",
   "Deprecated": "已棄用",
-  "The following old template features have been deprecated and will be removed in next version.": "以下舊的模板功能已棄用，將在下個版本移除。",
   "Full permissions": "完全權限",
   "No pages yet, please configure first": "尚未配置頁面，請先配置",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "點擊右上角的 \"介面設定\" 圖示進入介面設定模式",
