--- a/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/en-US.json
@@ -18,6 +18,8 @@
   "Channel name": "Channel name",
   "Message group name": "Message group name",
   "Message title": "Message title",
+  "Content type": "Content type",
+  "Plain text": "Plain text",
   "Message content": "Message content",
   "Details page for desktop": "Details page for desktop",
   "Support two types of links: internal links and external links. If using an internal link, the link starts with\"/\", for example, \"/admin\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "Support two types of links: internal links and external links. If using an internal link, the link starts with \"/\", for example, \"/admin\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".",
