--- a/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/zh-CN.json
@@ -18,6 +18,8 @@
   "Message group name": "消息分组名称",
   "Message title": "消息标题",
   "Message content": "消息内容",
+  "Content type": "内容格式",
+  "Plain text": "纯文本",
   "detail URL": "详情链接",
   "Details page for desktop": "桌面端详情页",
   "Support two types of links: internal links and external links. If using an internal link, the link starts with\"/\", for example, \"/admin\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "支持两种链接类型：内部链接和外部链接。如果使用内部链接，链接以“/”开头，例如“/admin”。如果使用外部链接，链接以“http”开头，例如“https://example.com”。",
