feat(auth): support the "Forgot Password" function (#6616)
* chore: stash

* chore: stash

* feat: lostPassword

* fix: refactor getEmailConfig to remove async and improve reset password link generation

* feat: resetPassword and checkResetToken

* feat: implement lostPassword, resetPassword, and checkResetToken actions with ACL permissions

* test: add tests for lostPassword

* test: add unit tests for auth:resetPassword and auth:checkResetToken

* fix: update resetPassword tests to remove unnecessary 'values' wrapper and improve token validation

* chore: add localized messages

* feat: add support for HTML email content in lostPassword functionality

* feat: add showForgotPassword prop to Password component and update SignInForm to use it

* feat: add ForgotPasswordPage component and implement lostPassword API call

* feat: add ResetPasswordPage component and integrate reset password functionality

* fix: avoid crashing

* feat: update text in password-related components to English

* feat: update labels in Options component to English

* feat: enhance SignInForm with forgot password link and sign up option

* fix: should hide 'Forgot password' when not enabled

* feat: add reset link expiration option in authentication settings

* fix: update emailer retrieval in notification manager to use async method

* fix: add loading state to forgot password form submission

* fix: update options handling in BasicAuth and improve reset password link generation

* fix(ForgotPasswordPage): handle loading state correctly during password reset

* fix(auth): enhance email template variable parsing for password reset notifications

* fix(auth): add baseURL parameter to password reset functionality

* fix(locale): add missing translations for password reset functionality in multiple languages

* chore: add loading

* fix(locale): add default email subject and content for password reset in multiple languages

* fix(locale): add notification channel messages and update password res

--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -1090,5 +1090,6 @@
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Cliquez sur l'icône \"Éditeur d'interface utilisateur\" dans le coin supérieur droit pour entrer en mode Éditeur d'interface utilisateur",
   "Refresh data blocks": "Aggiorna blocchi di dati",
   "Select data blocks to refresh": "Aggiorna blocchi di dati",
-  "After successful submission, the selected data blocks will be automatically refreshed.": "Dopo una soumission réussie, les blocs de données sélectionnés seront automatiquement actualisés."
+  "After successful submission, the selected data blocks will be automatically refreshed.": "Dopo una soumission réussie, les blocs de données sélectionnés seront automatiquement actualisés.",
+  "Reset link expiration": "Reimposta scadenza link"
 }
