--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -620,5 +620,6 @@
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Нажмите на значок \"Редактор пользовательского интерфейса\" в правом верхнем углу, чтобы войти в режим редактора пользовательского интерфейса",
   "Refresh data blocks": "Обновить блоки данных",
   "Select data blocks to refresh": "Выберите блоки данных для обновления",
-  "After successful submission, the selected data blocks will be automatically refreshed.": "После успешной отправки выбранные блоки данных будут автоматически обновлены."
+  "After successful submission, the selected data blocks will be automatically refreshed.": "После успешной отправки выбранные блоки данных будут автоматически обновлены.",
+  "Reset link expiration": "Сбросить срок действия ссылки"
 }
