--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -1107,5 +1107,6 @@
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "点击右上角的“界面配置”图标，进入界面配置模式",
   "After successful submission, the selected data blocks will be automatically refreshed.": "提交成功后，会自动刷新这里选中的数据区块。",
   "Block Linkage rules":"区块联动规则",
-  "Field Linkage rules":"字段联动规则"
+  "Field Linkage rules":"字段联动规则",
+  "Reset link expiration": "重置链接有效期"
 }
