--- a/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
@@ -24,5 +24,46 @@
   "Get models list failed, you can enter a model name manually.": "Get models list failed, you can enter a model name manually.",
   "Default greeting message": "Hi, I am {{ nickname }}",
   "Chat error warning": "Failed to send message. Please contact the administrator or try again later.",
-  "Data source settings description": "The selected collections will be included in the AI employee’s system definition. Metadata such as collection names and field details will be provided to the LLM at the start of each conversation, helping the AI understand and respond to natural language queries for data access or retrieval."
+  "Data source settings description": "The selected collections will be included in the AI employee’s system definition. Metadata such as collection names and field details will be provided to the LLM at the start of each conversation, helping the AI understand and respond to natural language queries for data access or retrieval.",
+  "AI employees": "AI employees",
+  "Avatar": "Avatar",
+  "Bio": "Bio",
+  "New AI employee": "New AI employee",
+  "Edit AI employee": "Edit AI employee",
+  "Profile": "Profile",
+  "Model settings": "Model settings",
+  "Skills": "Skills",
+  "Position": "Position",
+  "Position description": "A short label indicating the AI employee’s responsibility.",
+  "Position placeholder": "e.g. Translator, etc.",
+  "Bio placeholder": "The introduction to the AI employee will inform human colleagues about its skills and how to use it. This information will be displayed on the employee’s profile. This will not be part of the prompt of this AI employee.",
+  "About me": "About me",
+  "About me placeholder": "Define the AI employee’s role, guide its work, and instruct it complete user-assigned tasks. This will be part of the prompt of this AI employee.",
+  "Greeting message": "Greeting message",
+  "Greeting message placeholder": "Opening message sent to the user when starting a new conversation.",
+  "Add skill": "Add skill",
+  "Tools available for LLM function calling": "Tools available for LLM function calling",
+  "Form filler": "Form filler",
+  "Fill the form with the given content": "Fill the form with the given content",
+  "Workflow caller": "Workflow caller",
+  "Use workflow as a tool": "Use workflow as a tool",
+  "Automatically use skills when available": "Automatically use skills when available",
+  "Auto skill description": "When auto skill usage is enabled, the AI employee will invoke tools automatically without returning tool parameters to the conversation. If disabled, the tool call parameters will be returned in the conversation for the user to review and trigger manually.",
+  "Parameters": "Parameters",
+  "Add collection": "Add collection",
+  "Edit task": "Edit task",
+  "Task description": "Task description",
+  "Displays the AI employee’s assigned tasks on the profile when hovering over the button.": "Displays the AI employee’s assigned tasks on the profile when hovering over the button.",
+  "Task instruction": "Task instruction",
+  "Message type": "Message type",
+  "Message content": "Message content",
+  "Insert current block UI Schema": "Insert current block UI Schema",
+  "Select block UI schemas": "Select block UI schemas",
+  "Send default message automatically": "Send default message automatically",
+  "Select field values": "Select field values",
+  "Please choose an AI employee": "Please choose an AI employee",
+  "Rename": "Rename",
+  "Personalized prompt": "Personalized prompt",
+  "Personalized prompt description": "You can set personalized prompt for the current AI employee which will be sent to the LLM at the start of each new conversation.",
+  "Edit personalized prompt": "Edit personalized prompt"
 }
