fix(plugin-workflow): allow to revision more than one draft

--- a/packages/plugins/@nocobase/plugin-workflow/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-workflow/src/locale/zh-CN.json
@@ -15,7 +15,8 @@
   "Copy to new version": "复制到新版本",
   "Duplicate": "复制",
   "Duplicate to new workflow": "复制为新工作流",
-  "Delete a main version will cause all other revisions to be deleted too.": "删除主版本将导致其他版本一并被删除。",
+  "This is a main version, delete it will cause the whole workflow to be deleted (including all other revisions).": "当前是主版本，删除将导致整个流程被删除（包括所有其他版本）。",
+  "Current version will be deleted (without affecting other versions).": "当前版本将被删除（不影响其他版本）。",
   "Execute manually": "手动执行",
   "The trigger is not configured correctly, please check the trigger configuration.": "触发器配置不正确，请检查触发器配置。",
   "This type of trigger has not been supported to be executed manually.": "该类型的触发器暂未支持手动执行。",
