fix(notification-manager): add 'Edit' key to English locale

--- a/packages/plugins/@nocobase/plugin-notification-manager/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-notification-manager/src/locale/en-US.json
@@ -36,5 +36,6 @@
   "Log detail": "Log detail",
   "Message": "Message",
   "Notification manager": "Notification manager",
-  "Randomly generated and can not be modified. Support letters, numbers and underscores, must start with an letter.": "Randomly generated and can not be modified. Support letters, numbers and underscores, must start with an letter."
+  "Randomly generated and can not be modified. Support letters, numbers and underscores, must start with an letter.": "Randomly generated and can not be modified. Support letters, numbers and underscores, must start with an letter.",
+  "Edit": "Edit"
 }
